Bug-Fix: fixed the visibility of long user details in the '#top_bottom' element
git-svn-id: https://svn.java.net/svn/docsources~svn/trunk@3441 3b25252b-017b-4ae5-8f61-fa87a855a72e

--- a/DocSources/customizations/demo/styles/1024/Template.css
+++ b/DocSources/customizations/demo/styles/1024/Template.css
@@ -412,6 +412,11 @@ a {
 	float:right;
 	padding-right: 10px;
 	font-size: 11px;
+	width: 245px;
+	text-align: right;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 #top_bottom p:hover{ 
