--- a/DocSources/customizations/idea/styles/1024/Template.css
+++ b/DocSources/customizations/idea/styles/1024/Template.css
@@ -328,6 +328,11 @@ a {
 	padding-right: 10px;
 	font-size: 11px;
 	color: #aca28a;
+	width: 245px;
+	text-align: right;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 #top_bottom p:hover{ 
